apps/oauth2-proxy/manifests.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: lcs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=google
            #- --provider-display-name="Google"
            - --email-domain=*
            - --cookie-name=_oauth2_proxy
            - --cookie-secure=false
            - --pass-access-token=true
            #- --pass-authorization-header=true
            - --set-authorization-header=true
            - --set-xauthrequest=true
            #- --oidc-issuer-url=https://auth.justin-tech.com/auth/realms/Justin-Tech
            #- --login-url=https://auth.justin-tech.com/auth/realms/Justin-Tech/protocol/openid-connect/auth
            #- --redeem-url=https://auth.justin-tech.com/auth/realms/Justin-Tech/protocol/openid-connect/token
            #- --validate-url=https://auth.justin-tech.com/auth/realms/Justin-Tech/protocol/openid-connect/userinfo
            - --http-address=127.0.0.1:4180
            - --cookie-expire=1h0m0s
            #- --whitelist-domain=".lynceus.ai"
            #- --cookie-domain=.justin-tech.com
            - --standard-logging=true
            - --auth-logging=true
            - --request-logging=true
            #- --skip-provider-button=true
            - --upstream=static://200
            #- --redis-connection-url=redis://redis-master.default.svc.cluster.local:6379
            #- --session-store-type=redis
            #- --reverse-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.3
          imagePullPolicy: IfNotPresent 
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: lcs
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    app: oauth2-proxy
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy
  namespace: lcs
spec:
  gateways:
  - public-gateway.istio-system
  hosts:
  - oauth2-proxy.lynceus.ai
  http:
  - route:
    - destination:
        host: oauth2-proxy
        port:
          number: 4180
#---
#apiVersion: flagger.app/v1beta1
#kind: Canary
#metadata:
#  name: oauth2-proxy
#  namespace: lcs
#spec:
#  # deployment reference
#  targetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: oauth2-proxy
#  # the maximum time in seconds for the canary deployment
#  # to make progress before it is rollback (default 600s)
#  progressDeadlineSeconds: 60
#  # HPA reference (optional)
#  autoscalerRef:
#    apiVersion: autoscaling/v2beta1
#    kind: HorizontalPodAutoscaler
#    name: oauth2-proxy
#  service:
#    # container port
#    port: 4180
#    # Istio gateways (optional)
##    gateways:
##    - istio-system/public-gateway-oauth2-proxy
#    gateways:
#    - istio-system/public-gateway
#    # Istio virtual service host names (optional)
#    hosts:
#    - "oauth2-proxy.lynceus.ai"
#  skipAnalysis: true
#  analysis:
#    # schedule interval (default 60s)
#    interval: 15s
#    # max number of failed metric checks before rollback
#    threshold: 10
#    # total number of iterations
#    iterations: 10
#    # canary match condition
